Update processing cardboard to match Processing-Android repository as of 2015/12/08 checkout. This code now is in sync with Processing version 3 Android Mode. Set setRenderMode(GLSurfaceView.RENDERMODE_CONTINUOUSLY); in PApplet to fix problem resuming cardboard render thread. updates for Cardboard SDK 0.6.0 version